# pressurize

./: .coverage  .gitignore  LICENSE  README.md  TESTING.md  app.py  launch.ps1  pyproject.toml  requirements.txt  run_app.ps1
.github/: copilot-instructions.md
.github/workflows/: build.yml  manual-build.yml  release-build.yml  release.yml
assets/: custom.css
backend/: README.md  main.py  pyproject.toml  test_gauge_conversion.py
backend/api/: routes.py  schemas.py
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: physics.py  simulation.py
backend/app/utils/: __init__.py  converters.py
backend/core/: physics.py  properties.py  simulation.py
backend/pressurize/: __init__.py  __main__.py  main.py
backend/pressurize/api/: __init__.py  routes.py  schemas.py
backend/pressurize/config/: logging.py  settings.py
backend/pressurize/core/: __init__.py  physics.py  properties.py  simulation.py
backend/pressurize/utils/: __init__.py  converters.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_component_compatibility.py  test_converters.py  test_physics.py  test_properties.py  test_simulation.py
backend/utils/: converters.py
config/: settings.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/docs/: how-to-use.md  index.md  overview.md  technical-background.md  use-cases.md
frontend/docs/.vitepress/: config.js
frontend/src/: App.vue  env.d.ts  style.css
frontend/src/api/: client.ts  schema.ts  unit-defaults.json
frontend/src/components/: CompositionEditor.vue  KpiCard.vue  KpiCards.vue  ReportDownload.vue  ResultsChart.vue  ResultsTable.vue  SettingsEditor.vue  SimulationForm.vue
frontend/src/components/navigation/: HistoryPanel.vue  SettingsPanel.vue  SideNavBar.vue  UnitSystemPanel.vue
frontend/src/db/: simulationHistory.ts
frontend/src/styles/: AppLayout.css  CompositionEditor.css  KpiCard.css  ReportDownload.css  ResultsChart.css  ResultsTable.css  SettingsEditor.css  SimulationForm.css  common.css
legacy_dash/: app.py
legacy_dash/assets/: custom.css
legacy_dash/src/components/: common.py
legacy_dash/src/layouts/: main_layout.py
src/callbacks/: callbacks.py
src/components/: common.py  composition_selector.py
src/core/: physics.py  properties.py  simulation.py
src/layouts/: main_layout.py  sidebar.py
src/utils/: converters.py
tests/: test_api.py  test_component_compatibility.py  test_converters.py  test_physics.py  test_properties.py  test_simulation.py
