[project]
name = "pressurize"
version = "0.5"
description = "Gas blowdown simulation API for pressure vessel depressurization analysis"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Unmask06"}
]
keywords = ["gas", "blowdown", "simulation", "pressure", "vessel", "depressurization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "thermo>=0.3.0",
    "scipy>=1.11.0",
    "chemicals>=1.2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "fluids",
    "pytest>=9.0.2",
    "colorlog>=6.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0"
]
[tool.uv.sources]
fluids = { git = "https://github.com/Unmask06/fluids.git", branch = "master" }
pint-glass = { git = "https://github.com/Unmask06/pint-glass.git", branch = "main" }

[project.scripts]
pressurize = "pressurize.main:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pandas-stubs>=2.3.3.260113",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pressurize"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
